--- a/MonolithFullStackTemplate/templateUI/src/app/people/person/person.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/people/person/person.component.scss
@@ -2,6 +2,47 @@ $tabletSize: 800px;
 
 .person-dialog {
 
+  &-image-container {
+    position: relative;
+    width: 56px; /* Adjust the width as needed */
+    height: 56px; /* Adjust the height as needed */
+    padding: 20px;
+
+    //@media (min-width: $tabletSize) {
+    //  padding: 20px 50px 0;
+    //}
+  }
+
+  &-image-selector {
+    display: none; /* Hide the input field initially */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  &-image-input {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%; /* Occupy the entire width of the container */
+    height: 100%; /* Occupy the entire height of the container */
+    border-radius: 50%; /* Make the div round */
+    background-color: #ddd; /* Set a background color or use a background image */
+    color: #555; /* Set the color of the icon or text */
+    font-size: 24px; /* Adjust the font size as needed */
+    cursor: pointer;
+  }
+
+  //
+  //&-image-selector:focus {
+  //  border-color: #4d90fe;
+  //  box-shadow: 0 0 0 3px rgba(77, 144, 254, 0.3);
+  //}
+
   &-form-container {
     display: flex;
     flex-direction: column;
@@ -9,23 +50,23 @@ $tabletSize: 800px;
 
     @media (min-width: $tabletSize) {
       flex-direction: row;
-      padding:20px;
-      margin: 20px;
+      //padding: 20px;
+      //margin: 20px;
     }
   }
 
-  &-form-content{
+  &-form-content {
     width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
+    //padding-left: 10%;
+    //padding-right: 10%;
 
     @media (min-width: $tabletSize) {
-      padding: 5%;
+      //padding: 5%;
     }
   }
 
   &-form-content > * {
-    width: 80%;
+    width: 90%;
   }
 
   &-form-actions {
