--- a/MonolithFullStackTemplate/templateUI/src/app/home/home.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
-@import '../shared/styles/mixins/typography';
-@import '../shared/styles/mixins/media-query';
+@import 'src/app/shared/styles/mixins/typography';
+@import 'src/app/shared/styles/mixins/media-query';
 
 .home {
 
