--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
@@ -26,7 +26,7 @@
           <ng-template matMenuContent>
             <button mat-menu-item *ngFor="let language of availableLanguages"
                     [value]="language.value"
-                    (click)="useLanguage(language.value)">
+                    (click)="useLanguage(language)">
               {{language.viewValue | translate}}
             </button>
           </ng-template>
