ui - added time and timezones to the template

--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/template/template.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/template/template.component.html
@@ -1,3 +1,68 @@
 <p>template works!</p>
 
 Use this template to add more things to the application
+
+
+<h1>Time in Local</h1>
+<h2>Time now is: {{ timeNow }}</h2>
+
+<mat-divider></mat-divider>
+
+<h1>Time in UTC</h1>
+<h2>Time now is: {{ timeInUTC }}</h2>
+<h2>Time now is: {{ timeInUTCTest }}</h2>
+
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+
+
+<h1>Time in UK</h1>
+<h2>Time now is: {{ timeInUK }}</h2>
+<h2>Time now is: {{ timeInUKBST }}</h2>
+
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+
+<h1>Time in CY</h1>
+<h2>Time now is: {{ timeInCY }}</h2>
+<h2>Time now is: {{ timeInCYBST }}</h2>
+
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+<mat-divider></mat-divider>
+
+<h1>Time in BR</h1>
+<h2>Time now is: {{ timeInBR }}</h2>
