--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
@@ -11,11 +11,11 @@
         <div class="pointerCursor">
           <span>Template UI</span>
         </div>
-        <a mat-button class="btn-no-hover" routerLink="/home">{{'header.home' | translate}}</a>
-        <a mat-button class="btn-no-hover" *ngIf="usersAccess"
-           (click)="getUsers()">{{'header.users' | translate}}</a>
-        <a mat-button class="btn-no-hover" *ngIf="peopleAccess"
-           (click)="getPeople()">{{'header.people' | translate}}</a>
+        <a mat-button class="btn-no-hover" routerLink="/home">{{ 'header.home' | translate }}</a>
+        <a mat-button class="btn-no-hover" *ngIf="usersAccess()"
+           (click)="getUsers()">{{ 'header.users' | translate }}</a>
+        <a mat-button class="btn-no-hover" *ngIf="peopleAccess()"
+           (click)="getPeople()">{{ 'header.people' | translate }}</a>
       </div>
 
       <div class="header-actions">
@@ -27,23 +27,23 @@
             <button mat-menu-item *ngFor="let language of availableLanguages"
                     [value]="language.value"
                     (click)="useLanguage(language)">
-              {{language.viewValue | translate}}
+              {{ language.viewValue | translate }}
             </button>
           </ng-template>
         </mat-menu>
 
-        <div *ngIf="isLoggedOn; then userDetails else logInDetails"></div>
+        <div *ngIf="isLoggedOn(); then userDetails else logInDetails"></div>
 
         <ng-template #userDetails>
           <button mat-icon-button (click)="getProfile()">
             <mat-icon>account_circle</mat-icon>
           </button>
-          <a mat-button class="btn-no-hover" (click)="logout()">{{'header.logOut' | translate}} </a>
+          <a mat-button class="btn-no-hover" (click)="logout()">{{ 'header.logOut' | translate }} </a>
         </ng-template>
 
         <ng-template #logInDetails>
-          <a mat-button class="btn-no-hover" routerLink="/register">{{'header.register' | translate}}</a>
-          <a mat-button class="btn-no-hover" routerLink="/login">{{'header.login' | translate}}</a>
+          <a mat-button class="btn-no-hover" routerLink="/register">{{ 'header.register' | translate }}</a>
+          <a mat-button class="btn-no-hover" routerLink="/login">{{ 'header.login' | translate }}</a>
         </ng-template>
       </div>
 
