--- a/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
@@ -8,8 +8,8 @@
 
       <div class="wrapper-sidenav-menu">
         <a mat-button class="btn-no-hover" routerLink="/home" (click)="sidenav.toggle()">{{'header.home' | translate}}</a>
-        <a mat-button class="btn-no-hover" [hidden]="!usersAccess" (click)="getUsers(sidenav)">{{'header.users' | translate}}</a>
-        <a mat-button class="btn-no-hover" [hidden]="!peopleAccess" (click)="getPeople(sidenav)">{{'header.people' | translate}}</a>
+        <a mat-button class="btn-no-hover" [hidden]="!usersAccess()" (click)="getUsers(sidenav)">{{'header.users' | translate}}</a>
+        <a mat-button class="btn-no-hover" [hidden]="!peopleAccess()" (click)="getPeople(sidenav)">{{'header.people' | translate}}</a>
       </div>
     </mat-sidenav>
 
